syntax = "proto3";

option csharp_namespace = "ApiGateway.Protos.Product";


package products;


service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse);
  rpc GetProductById(GetProductByIdRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (ProductResponse);
}

message Product {
  string id = 1;          // UUID V4
  string name = 2;
  string description = 3;
  float price = 4;
  string category = 5;
  string image_url = 6;     // URL de Cloudinary [cite: 75]
  string status = 7;        // "activo" o "inactivo"
  string created_at = 8;    // Fecha de registro [cite: 75]
}


message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  string category = 4;
  bytes image_data = 5; 
}

message GetProductsRequest {}  


message GetProductsResponse {
  repeated Product products = 1; // Devuelve una lista de productos
}

message GetProductByIdRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string category = 5;
  bytes new_image_data = 6; 
}

message DeleteProductRequest {
  string id = 1;
}

message ProductResponse {
  Product product = 1;
}